--- a/page3.html
+++ b/page3.html
@@ -95,7 +95,7 @@
                     <div class="image-wrapper mb-4">
                         <a href="page6.html"><img src="assets/images/dia-1-v-593x284.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong><br>15:00 - 16:10 -</strong> A ciência no combate ao negacionismo<br><strong>16:15 - 17:20 - </strong>Biocolóides e Materiais renováveis</p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong><br>15:10 - 16:10 -</strong> A ciência no combate ao negacionismo<br><strong>16:15 - 17:20 - </strong>Biocolóides e Materiais renováveis</p>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     <div class="image-wrapper mb-4">
                         <a href="page7.html"><img src="assets/images/dia-2-v-2-498x236.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong><br>14:00 - 16:10 -</strong>&nbsp;Os desafios técnicos &amp; científicos do concreto zero carbono<br><strong>16:15 - 17:20</strong> - Celulose bacteriana: um material, múltiplas aplicações<br></p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong><br>08:00 - 11:00</strong> - Iniciação de pequenos cientistas<br><strong>14:00 - 15:10 </strong>-&nbsp;Os desafios técnicos &amp; científicos do concreto zero carbono<br><strong>16:15 - 17:20</strong> - Celulose bacteriana: um material, múltiplas aplicações<br></p>
                 </div>
             </div>
             <span class="iconBackground"></span>
@@ -119,7 +119,7 @@
         <div class="row timeline-element mb-2">
             <div class="timeline-date col-12 col-md-6">
                 <div class="timeline-date-wrapper">
-                    <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>24 August 2022</strong></p>
+                    <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>24 August 2022</strong><br></p>
                 </div>
             </div>
             <span class="iconBackground"></span>
@@ -129,7 +129,7 @@
                     <div class="image-wrapper mb-4">
                         <a href="page8.html"><img src="assets/images/dia-4-v-2-438x228.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><br><strong>16:15 - 17:20 -</strong> Maravilhas dos vidros! </p>
+                    <p class="mbr-text mbr-fonts-style display-7"><br><strong>16:15 - 17:20</strong> - Maravilhas dos vidros!<br></p>
                 </div>
             </div>
         </div>
@@ -140,30 +140,30 @@
                     <div class="image-wrapper mb-4">
                         <a href="page9.html"><img src="assets/images/dia-4-v-430x203.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong>16:15 - 17:20&nbsp;-</strong>&nbsp;Microscopia eletrônica e sua potência na caracterização de materiais </p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong>16:15 - 17:20</strong> - Microscopia eletrônica e sua potência na caracterização de materiais</p>
                 </div>
             </div>
             <span class="iconBackground"></span>
             <div class="timeline-date col-12 col-md-6">
                 <div class="timeline-date-wrapper">
-                    <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>25 August 2022</strong></p>
+                    <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>25 August 2022</strong><br></p>
                 </div>
             </div>
         </div>
         <div class="row timeline-element mb-2">
             <div class="timeline-date col-12 col-md-6">
                 <div class="timeline-date-wrapper">
-                    <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>26 August 2022</strong></p>
+                    <p class="mbr-timeline-date mbr-fonts-style display-5"><strong>26 August 2022</strong><br></p>
                 </div>
             </div>
             <span class="iconBackground"></span>
             <div class="col-12 col-md-6">
                 <div class="timeline-text-wrapper">
-                    <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-5"><a href="page10.html" class="text-black"><strong>Palestra 8</strong></a></h4>
+                    <h4 class="mbr-timeline-title mbr-fonts-style mb-4 display-5"><a href="page10.html" class="text-black"><strong></strong></a><strong><a href="page10.html" class="text-black"><b>Palestra</b>&nbsp;</a>8</strong></h4>
                     <div class="image-wrapper mb-4">
-                        <a href="page10.html"><img src="assets/images/dia-v-5-2-522x185.png" alt="Mobirise" title=""></a>
+                        <a href="page10.html" target="_blank"><img src="assets/images/dia-v-5-2-522x185.png" alt="Mobirise" title=""></a>
                     </div>
-                    <p class="mbr-text mbr-fonts-style display-7"><strong>14:00 - 16:10 -</strong> Nanocápsulas poliméricas: carreadores versáteis para administração de fármacos</p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong>14:00 - 15:10</strong> - Nanocápsulas poliméricas: carreadores versáteis para administração de fármacos</p>
                 </div>
             </div>
         </div>
@@ -186,7 +186,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
                 <div class="image-wrapper">
-                    <img src="assets/images/cronograma-1089x517.png" alt="Mobirise">
+                    <img src="assets/images/horrio-1456x1456.jpg" alt="Mobirise">
                     
                 </div>
             </div>
@@ -250,7 +250,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Check this</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Designed with Mobirise</a> website creator</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
